[tool.poetry]
name = "python-utils"
version = "0.0.1"
description = "python utils of s-hirano-ist"
authors = ["s-hirano-ist <solucky0725@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
